--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -7,10 +7,19 @@ bold-is-bright = true
 theme = "GruvboxDarkHard"
 
 cursor-color = #F5A442
-cursor-style = bar
+cursor-style = block
+cursor-style-blink = false
+shell-integration-features = no-cursor
 
 background-opacity = 0.95
 background-blur = 20
 
 #background-image = "~/.config/ghostty/bentley.jpg"
 #background-image-opacity = 0.8
+
+
+# >>>>>>>>>>>> KEYBINDING <<<<<<<<<<<<<<<<<<<<<
+keybind = performable:super+c=copy_to_clipboard
+keybind = performable:super+v=paste_from_clipboard
+keybind = performable:super+shift+o=open_config
+keybind = performable:super+shift+,=reload_config
