--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,3 +27,6 @@ setw -g pane-base-index 1
 # when an intermidiate window is deleted
 #
 set -g renumber-windows on
+
+set -g status-bg "#32a852"
+set -g status-fg "#000000"
