Made changes on Nvim to Finish NeoTest Config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,32 +1,16 @@
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-#   mode-keys sets the key bindings for copy mode. 
-#   If this is set to vi, then the copy-mode-vi key 
-#   table is used in copy mode; otherwise
-#   the copy-mode key table is used.
-#
-set -g mode-keys vi
+set -ga terminal-overrides ",screen-256color*:Tc"
+set-option -g default-terminal "screen-256color"
 
-#   status-keys sets the key bindings for the command prompt.
-#
-set -g status-keys vi
+set -g mode-keys vi # copy mode using VIM
+set -g status-keys vi # status-keys sets the key bindings for the command prompt.
 
-# set mouse to be available
-#
-set -g mouse on
+set -g mouse on # set mouse to be available
 
-# index windows using 1-indexing
-#
-set -g base-index 1
-
-# index panes using 1-indexing
-#
-setw -g pane-base-index 1
-
-# re-index bottom windows automatically
-# when an intermidiate window is deleted
-#
-set -g renumber-windows on
+set -g base-index 1 # index windows using 1-indexing
+setw -g pane-base-index 1 # index panes using 1-indexing
+set -g renumber-windows on # renumber windows when a window is closed
 
 set -g status-bg "#32a852"
 set -g status-fg "#000000"
